--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
                 <div class="input-group">
 
-                    <label for="paymentAddress">Your USDT Wallet Address (TRC20)</label>
+                    <label for="paymentAddress">Your Binanci UID)</label>
 
                     <input type="text" id="paymentAddress" placeholder="e.g., T... (TRC20 Address)">
 
