--- a/index.html
+++ b/index.html
@@ -446,13 +446,13 @@
 
                 // Home & Withdraw Views
 
-                balanceDisplay.textContent = `USDT ${balanceInUSDT}`;
+                balanceDisplay.textContent = `Dogs ${balanceInUSDT}`;
 
                 adCountDisplay.textContent = state.totalAdCount;
 
                 dailyAdCountDisplay.textContent = `${state.dailyAdCount} / ${DAILY_AD_LIMIT}`;
 
-                withdrawBalanceDisplay.textContent = `USDT ${balanceInUSDT}`;
+                withdrawBalanceDisplay.textContent = `Dogs ${balanceInDogs}`;
 
                 
 
