--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
                 <h2>Current Balance</h2>
 
-                <div class="balance-amount" id="balanceDisplay">USDT 0.00</div>
+                <div class="balance-amount" id="balanceDisplay">Dogs 0.00</div>
 
                 <div class="ad-info-grid">
 
