--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
             <div class="ad-buttons"><button class="btn" id="rewardedBtn">Watch Ad (+0.01 USDT)</button></div>
 
-            <button class="btn" id="mainWithdrawBtn" disabled>Reach 10.00 USDT to Withdraw</button>
+            <button class="btn" id="mainWithdrawBtn" disabled>Reach 500 Dogs to Withdraw</button>
 
         </div>
 
