--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
                 <div class="balance-amount" id="withdrawBalanceDisplay">USDT 0.00</div>
 
-                <p style="color: var(--tg-theme-hint-color); margin-top: 15px;">Minimum withdrawal is 10.00 USDT.</p>
+                <p style="color: var(--tg-theme-hint-color); margin-top: 15px;">Minimum withdrawal is 500 Dogs.</p>
 
             </div>
 
