--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
                     <label for="paymentAddress">Your Binanci UID)</label>
 
-                    <input type="text" id="paymentAddress" placeholder="e.g., T... (TRC20 Address)">
+                    <input type="text" id="paymentAddress" placeholder="Enter.. (Binance UID)">
 
                 </div>
 
