--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
         <div id="home-view" class="view">
 
-            <div class="header"><h1>Earning Technology</h1><p>Watch Ads and Earn USDT</p></div>
+            <div class="header"><h1>Earning Technology</h1><p>Watch Ads and Earn Dogs</p></div>
 
             <div class="card">
 
