--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
             </div>
 
-            <div class="ad-buttons"><button class="btn" id="rewardedBtn">Watch Ad (+0.01 USDT)</button></div>
+            <div class="ad-buttons"><button class="btn" id="rewardedBtn">Watch Ad (+20 Dogs)</button></div>
 
             <button class="btn" id="mainWithdrawBtn" disabled>Reach 500 Dogs to Withdraw</button>
 
