--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
                     <div class="ad-info-item"><h3 id="referralCountDisplay">0</h3><p>Total Referrals</p></div>
 
-                    <div class="ad-info-item"><h3 id="referralBonusDisplay">USDT 0.00</h3><p>Referral Earnings</p></div>
+                    <div class="ad-info-item"><h3 id="referralBonusDisplay">Dogs 0.00</h3><p>Referral Earnings</p></div>
 
                 </div>
 
@@ -284,7 +284,7 @@
 
                 <h2>Your Referral Link</h2>
 
-                <p>Share this link with your friends. You get 0.5 USDT for each verified friend who joins!</p>
+                <p>Share this link with your friends. You get 80 Dogs for each verified friend who joins!</p>
 
                 <p id="referralLink" title="Click to copy"></p>
 
